# lesser-doom

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c  shader.c  shader.h  window.c  window.h  world.c  world.h
